fix access issue with macos show/hide windowing commands