@@ -189,6 +189,7 @@ application {
                                  "--add-opens=javafx.graphics/com.sun.javafx.tk=centerdevice.nsmenufx",
                                  "--add-opens=javafx.graphics/com.sun.javafx.tk.quantum=centerdevice.nsmenufx",
                                  "--add-opens=javafx.graphics/com.sun.glass.ui=centerdevice.nsmenufx",
+                                 "--add-opens=javafx.graphics/com.sun.glass.ui.mac=centerdevice.nsmenufx",
                                  "--add-opens=javafx.controls/com.sun.javafx.scene.control=centerdevice.nsmenufx",
                                  "--add-opens=javafx.graphics/com.sun.javafx.menu=centerdevice.nsmenufx",
                                  "--add-opens=javafx.graphics/com.sun.glass.ui=com.sparrowwallet.sparrow",
@@ -237,6 +238,7 @@ jlink {
                    "--add-opens=javafx.graphics/com.sun.javafx.tk=centerdevice.nsmenufx",
                    "--add-opens=javafx.graphics/com.sun.javafx.tk.quantum=centerdevice.nsmenufx",
                    "--add-opens=javafx.graphics/com.sun.glass.ui=centerdevice.nsmenufx",
+                   "--add-opens=javafx.graphics/com.sun.glass.ui.mac=centerdevice.nsmenufx",
                    "--add-opens=javafx.controls/com.sun.javafx.scene.control=centerdevice.nsmenufx",
                    "--add-opens=javafx.graphics/com.sun.javafx.menu=centerdevice.nsmenufx",
                    "--add-opens=javafx.graphics/com.sun.glass.ui=com.sparrowwallet.sparrow",
